--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype HTML>
-
+<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Thinkful React Starter</title>
-
 <link rel="stylesheet" href="css/index.css">
-
+</head>
+<body>
+<title>Thinkful React Starter</title>
 <div id="app"></div>
+</body>
 
-<script src="js/index.js"></script>
+
+<footer><script src="js/index.js"></script>
+</footer>
+</html>
 
